updated the blog post under talks

--- a/_talks/2021-06-19-talk-1.md
+++ b/_talks/2021-06-19-talk-1.md
@@ -11,4 +11,7 @@ location: "Virtual Congress"
 
 A key feature of third-generation light sources is their small vertical opening angle, which is difficult to measure experimentally. 
 
+In 2021, I was honored to receive the **Best Student Presentation Award** at the  
+[Canadian Association of Physicists (CAP) Virtual Congress](https://cap.ca/congress-conference/past-congress/2021-cap-virtual-congress-june-6-11/best-student-competition/2021-prize-recipients/).
+
 [More information here](https://underline.io/speakers/96868-yasaman-yousefi-sigari)
