added the third talk poster from CAP

--- a/_talks/2023-06-20-talk-3.md
+++ b/_talks/2023-06-20-talk-3.md
@@ -10,3 +10,6 @@ location: "NB, Canada"
 ---
 
 Touschek lifetime in 4th generation light sources
+
+A copy of Conference abstract:
+<iframe src="{{ 'assets/CAP_2023_yyousefisigari.pdf' | relative_url }}" width="100%" height="600px" style="border:none;"></iframe>
