edited blog posts 1

--- a/_posts/2025-10-15-blog-post-1.md
+++ b/_posts/2025-10-15-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Memoyline'
+title: 'Memory lane'
 date: 2025-10-15
 permalink: /posts/2025/10/blog-post-1/
 tags:
@@ -30,4 +30,5 @@ And some of us find our way much later, maybe during undergrad, maybe even after
 No matter when or how, I truly believe that if you can dream it, you can become it.
 
 Because in the end, a PhD is a lot like poker: everyone is dealt a different hand, but if you play enough rounds — with patience, strategy, and grit — you can flip the game entirely.
+
 ------
